# Prism

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  flatpak.yml  release.yml
CMakeModules/: FindNDI.cmake
docs/: shader-data-interface.md
flatpak/: org.cutwire.Prism.desktop  org.cutwire.Prism.metainfo.xml  org.cutwire.Prism.yml
forms/: ClipCard.ui  ClipEditDialog.ui  HtmlEditDialog.ui  MainWindow.ui  OutputWindow.ui  QmlEditDialog.ui  ScriptEditDialog.ui
include/core/: AssetPathResolver.h  AudioDecoder.h  AudioPlayer.h  CanvasSource.h  ClipManager.h  DynamicInterfaceSource.h  HtmlSource.h  HtmlWorkspace.h  ImageSource.h  MediaSource.h  OverlayItem.h  SourceDescriptor.h  SwitchXVp9RtpDepacketizer.h  ThumbnailExtractor.h  VideoPlayer.h  WebRtcCamPage.h  WebRtcManager.h  WebRtcPairing.h
include/core/effects/: EffectPassRunner.h
include/core/media/: AudioAnalyzer.h  AudioLoopbackCapture.h  AudioLoopbackCaptureGStreamer.h  AudioPlayer.h
include/core/platform/: MacPermissions.h
include/core/scripting/: ScriptRuntime.h
include/core/sources/: EffectSources.h  LayerCompositorSource.h  ScreenSource.h  ShaderSource.h
include/core/webrtc/: PrismVp9RtpDepacketizer.h
include/ui/: AssetLibrary.h  ClipCard.h  ClipEditDialog.h  ClipNodeEditor.h  ClipNodeModel.h  CropSelectorWidget.h  DeckController.h  GroupEditorDialog.h  HotkeyEditorDialog.h  HotkeyManager.h  HtmlEditDialog.h  HtmlPreviewWidget.h  HtmlWorkspaceCanvasWidget.h  MainWindow.h  MainWindowUtils.h  MaterialSymbols.h  MirrorOutputWindow.h  ObsIntegration.h  ObsWebSocketClient.h  OutputHub.h  OutputWindow.h  OverlayCanvasWidget.h  ProgramFrameSource.h  ProgramMirrorWidget.h  ProgramRecorder.h  QmlEditDialog.h  RemoteControlServer.h  RemoteProtocol.h  RemoteServerDialog.h  SessionManager.h  SessionRecoveryDialog.h  SourcePrompt.h  ThumbHelper.h  Transition.h  TransitionController.h  VideoWidget.h  VirtualCameraProgramSink.h
include/ui/canvas/: PerspectiveSelectorWidget.h  PolygonSelectorWidget.h  TransformCanvasWidget.h  TransformEditorDialog.h  VideoWidget.h
include/ui/common/: AudioLoopbackEnumerator.h  CameraEnumerator.h  CapturePicker.h  CodeHighlighter.h  MaterialSymbols.h
include/ui/mainwindow/: DeckController.h  GetStartedDialog.h  MainWindow.h  SourceFactory.h  SourcePrompt.h
include/ui/nodes/: ClipNodeEditor.h  ProcessEffects.h
include/ui/output/: FrameCaptureHelper.h  MirrorOutputWindow.h  OutputWindow.h
include/ui/recording/: ProgramAudioRecorder.h  ProgramRecorder.h  RecordingSettingsDialog.h
installer/windows/: Prism.iss
packaging/arch/: PKGBUILD
resources/: resources.qrc
resources/html/: clock.html  countdown_timer.html  cricket_score_bar.html  cricket_score_table.html
resources/html/widgets/: clock.html  countdown_timer.html  cricket_score_bar.html  cricket_score_table.html
resources/macos/: Info.plist.in  Prism.icns
resources/qml/: clock.qml  countdown_timer.qml  cricket_score_bar.qml  cricket_score_table.qml
resources/scripts/: ab_auto_switch.lua
resources/shaders/: audio_pulse_vu_bars.glsl
resources/windows/: Prism.rc
scripts/: build-windows.ps1  extract_release_notes.py  webrtc_signaling_server.py
src/: main.cpp
src/core/: AssetPathResolver.cpp  AudioDecoder.cpp  AudioPlayer.cpp  CanvasSource.cpp  ClipManager.cpp  DynamicInterfaceSource.cpp  HtmlSource.cpp  HtmlWorkspace.cpp  ImageSource.cpp  OverlayItem.cpp  SwitchXVp9RtpDepacketizer.cpp  ThumbnailExtractor.cpp  VideoPlayer.cpp  WebRtcCamPage.cpp  WebRtcManager.cpp  WebRtcPairing.cpp
src/core/effects/: EffectPassRunner.cpp
src/core/media/: AudioAnalyzer.cpp  AudioLoopbackCapture.cpp  AudioLoopbackCapture_gst_linux.cpp  AudioPlayer.cpp  VideoPlayer.cpp
src/core/platform/: MacPermissions.cpp
src/core/scripting/: ScriptRuntime.cpp
src/core/sources/: CameraSource.cpp  EffectSources.cpp  HtmlSource.cpp  LayerCompositorSource.cpp  ScreenSource_linux.cpp  ScreenSource_qt.cpp  ShaderSource.cpp
src/core/webrtc/: WebRtcTlsStore.cpp
src/ui/: AssetLibrary.cpp  ClipCard.cpp  ClipCard.h  ClipEditDialog.cpp  ClipEditDialog.h  ClipNodeEditor.cpp  ClipNodeModel.cpp  CropSelectorWidget.cpp  DeckController.cpp  GroupEditorDialog.cpp  HotkeyEditorDialog.cpp  HotkeyManager.cpp  HtmlEditDialog.cpp  HtmlPreviewWidget.cpp  HtmlWorkspaceCanvasWidget.cpp  MainWindow.cpp  MainWindow.h  MainWindowUtils.cpp  MaterialSymbols.cpp  MirrorOutputWindow.cpp  ObsIntegration.cpp  ObsWebSocketClient.cpp  OutputHub.cpp  OutputWindow.cpp  OverlayCanvasWidget.cpp  ProgramMirrorWidget.cpp  ProgramRecorder.cpp  QmlEditDialog.cpp  RemoteControlServer.cpp  RemoteProtocol.cpp  RemoteServerDialog.cpp  SessionManager.cpp  SessionRecoveryDialog.cpp  SourceFactory.cpp  SourcePrompt.cpp  ThumbHelper.cpp  TransformCanvasWidget.cpp  TransformEditorDialog.cpp  Transition.cpp  TransitionController.cpp  (+3 more)
src/ui/canvas/: GroupEditorDialog.cpp  PerspectiveSelectorWidget.cpp  PolygonSelectorWidget.cpp  TransformCanvasWidget.cpp  TransformEditorDialog.cpp  VideoWidget.cpp
src/ui/common/: AudioLoopbackEnumerator.cpp  CameraEnumerator.cpp  CapturePicker.cpp  CodeHighlighter.cpp
src/ui/editors/: HtmlEditDialog.cpp  ScriptEditDialog.cpp  ShaderEditDialog.cpp
src/ui/mainwindow/: DeckController.cpp  GetStartedDialog.cpp  MainWindow.cpp  SourceFactory.cpp  SourcePrompt.cpp
src/ui/nodes/: ClipCard.cpp  ClipNodeEditor.cpp  ProcessEffects.cpp
src/ui/output/: FrameCaptureHelper.cpp  MirrorOutputWindow.cpp  NdiProgramSink.cpp  OutputHub.cpp  OutputWindow.cpp  VirtualCameraProgramSink_linux.cpp  VirtualCameraProgramSink_mac.cpp  VirtualCameraProgramSink_win.cpp
src/ui/recording/: ProgramAudioRecorder.cpp  ProgramRecorder.cpp  RecordingSettingsDialog.cpp
src/ui/remote/: RemoteControlServer.cpp
tests/: CMakeLists.txt  TestSupport.h  test_abscript.cpp  test_audio.cpp  test_camerasource.cpp  test_hotkeys.cpp  test_mainwindowutils.cpp  test_packaging.cpp  test_persistence.cpp  test_processnodes.cpp  test_recording.cpp  test_remotecontrol.cpp  test_sources.cpp  test_thumbhelper.cpp  test_videowidget.cpp
(+1 files in other folders)
